[build-system]
requires = ["hatchling >= 1.13.0"]
build-backend = "hatchling.build"

[project]
name = "custom_actions"
description = "Registry for custom actions and integrations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adbc-driver-postgresql==1.0.0",
    "adbc-driver-snowflake==1.0.0",
    "adbc-driver-sqlite==1.0.0",
    "ansible-runner==2.4.0",
    "aioboto3==13.0.1",
    "boto3==1.34.70",
    "crowdstrike-falconpy==1.4.4",
    "dnspython==2.6.1",
    "grpcio==1.68.0",
    "httpx==0.27.0",
    "ldap3==2.9.1",
    "nh3==0.2.18",
    "pymongo==4.8.0",
    "pytenable==1.6.0",
    "slack-sdk==3.28.0",
    "tenacity==8.3.0",
    "types-aioboto3[guardduty,s3]==13.0.1",
]
dynamic = ["version"]

[tool.hatch.version]
path = "custom_actions/__init__.py"
